Sat Oct 20 15:35:06 2012  Narihiro Nakamura  <authornari@gmail.com>

	* include/ruby/ruby.h: add C APIs.
	  VALUE rb_newobj_of(VALUE klass, VALUE flags)
	  #define NEWOBJ_OF(obj,type,klass,flags)
	  These allow to change a allocation strategy depending on klass
	  or flags.

	* gc.c: ditto

	* array.c: use new C API.
	* bignum.c: ditto
	* class.c: ditto
	* complex.c: ditto
	* ext/socket/ancdata.c: ditto
	* ext/socket/option.c: ditto
	* hash.c: ditto
	* io.c: ditto
	* marshal.c: ditto
	* numeric.c: ditto
	* object.c: ditto
	* random.c: ditto
	* range.c: ditto
	* rational.c: ditto
	* re.c: ditto
	* string.c: ditto
	* struct.c: ditto
	  [Feature #7177][Feature #7047]

Sat Oct 20 12:50:00 2012  Zachary Scott	<zachary@zacharyscott.net>

	* ext/socket/socket.c: Documentation for Socket
	  Based on a patch by David Albert
	  [Bug #7105] [ruby-core:47828]

Sat Oct 20 11:00:00 2012  Zachary Scott	<zachary@zacharyscott.net>

	* lib/open-uri.rb: Documentation for OpenURI

Sat Oct 20 06:18:34 2012  Aaron Patterson <aaron@tenderlovemaking.com>

	* hash.c (initialize_copy): unset the default proc if there isn't one
	  for the target hash, call to_hash, check frozen status.

Fri Oct 19 22:22:01 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm.c (rb_vm_jump_tag_but_local_jump): pass through thrown objects.
	  [ruby-dev:46234] [Bug #7185]

	* vm_eval.c (rb_eval_cmd): if state is non-zero, val should be nil and
	  rb_vm_jump_tag_but_local_jump() just jump tag.

Fri Oct 19 22:11:55 2012  Benoit Daloze  <eregontp@gmail.com>

	* pack.c (pack_unpack): set encoding of the
	  'H','h','B' and 'B' modifiers to US-ASCII.

	* test/ruby/test_pack.rb: tests for the above.
	  [ruby-core:47653][Bug #7050]

	* test/test_securerandom.rb: tests for SecureRandom.hex
	  from tenderlove. [ruby-core:46792][Bug #6799]

Fri Oct 19 19:29:11 2012  Koichi Sasada  <ko1@atdot.net>

	* method.h (rb_method_cfunc_t::invoker): add new field (func ptr)
	  `invoker'. `invoker' function invoke cfunc body